--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,9 +9,9 @@
 @import url('./header.css');
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
+  font-family: Inter, Avenir, Helvetica, Arial, Arial Narrow, sans-serif;
+  font-size: 24px;
+  line-height: 40px;
   font-weight: 400;
 
   color: #242424;
@@ -22,4 +22,62 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+.container {
+  text-align: center;
+}
+
+input[type="text"] {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+button {
+  font-size: 24px;
+  margin-top: 20px;
+}
+
+.timer {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.value {
+  font-size: 60px;
+  margin-bottom: 20px;
+  font-family: 'Arial Narrow', Arial, sans-serif;
+}
+
+.label {
+  font-size: 20px;
+  font-family: 'Arial Narrow', Arial, sans-serif;
+  text-transform: uppercase;
+}
+
+.form-container {
+  width: 500px;
+  padding: 0px;
+  margin: 0 auto;
+  align-items: center;
+  display: flex;
+  text-align: left;
+  flex-direction: column;
+}
+
+input[type="number"] {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.form {
+  font-size: 20px;
 }
